# C-Language-homework

./: .gitignore  20170316work1.c  20170316work2.c  20170316work3.c  20170316work4.c
20170320/: CS201609_U201614764_冯豆（第一次实验）.doc  Exp.rar  MyWork.c  Mywork2.c  mywork3.c  work4.c  work5.c  《C语言程序设计实验》报告-冯豆.doc  《C语言程序设计实验》报告封面以及正文目录结构.doc  《C语言程序设计实验》报告必要内容.doc  《C语言程序设计实验》报告格式示例.doc  《C语言程序设计实验》报告格式示例.doc.crdownload  新建 Microsoft Excel 工作表.xlsx  （1）流程图.eddx
20170331/: CS201609_U201614764_冯豆（第二次实验）.doc  杨辉三角.c
20170401/: 2.3.1.c  2.3.3(1).c  2.3.3(2).c  2.3.3(3)angle.c  2.3.3(4).c  2.3.4.c
KeShe_DaChuang/: CMakeLists.txt  Keshe_dachuang.VC.db  Keshe_dachuang.sln  college.c  college.h  main.c  people.c  people.h  project.c  project.h  schedule.c  schedule.h  student.c  student.h  studentTable.c  studentTable.h  total.c  total.h
Page20170326/: work1.c  work2.c  work2.txt  work4.c  work5.c
Page20170407/: pagework1.c  pagework2.c  pagework3.c  pagework4.c
Page20170415/: pagework01.c  pagework02.c  pagework03.c  pagework04.c  pagework05.c  pagework06.c  pagework07.c  pagework08.c
ProjectManager_UI/: ProjectManager_UI.pro  adddialog.h  addscheduledialog.cpp  addscheduledialog.ui  college.cpp  college.h  dialogfindsch.cpp  dialogpeo.cpp  dialogpeo.h  dialogpeo.ui  dialogproadd.cpp  dialogproadd.h  dialogproadd.ui  dialogsch.cpp  dialogsch.h  dialogsch.ui  dialogschmodify.cpp  dialogschmodify.h  dialogschmodify.ui  dialogtable.cpp  dialogtable.h  dialogtable.ui  dialogtableselect.cpp  dialogtableselect.h  dialogtableselect.ui  main.cpp  mainwindow.cpp  mainwindow.h  (+13 more)
(+12 files in other folders)
